2009-10-21  Darin Adler  <darin@apple.com>

        Swedish search (and other languages as well) is broken while fixing Japanese search
        https://bugs.webkit.org/show_bug.cgi?id=30646

        Rolled Japanese tailoring out that was done to fix
        https://bugs.webkit.org/show_bug.cgi?id=30437 earlier.
        It was overriding the locale-specific tailoring.
        We'll land a fix once we figure out how to add the
        Japanese tailoring without removing anything.

        * editing/TextIterator.cpp: Rolled out r49924.

2009-10-21  Pavel Feldman  <pfeldman@chromium.org>

        Not reviewed: chromium build fix - add missing image to gypi.

        * WebCore.gypi:

2009-10-21  Brian Weinstein  <bweinstein@apple.com>

        Reviewed by Eric Seidel.

        Fixes part of <http://webkit.org/b/30522>.
        Web Inspector: DOM Exceptions throughout the Inspector should be more human readable.

        Expose the description attribute that is now a member of
        ExceptionBase as of r49723, so when a user logs an exception, they
        can see the description in the Web Inspector.

        Test: fast/dom/dom-exception-description.html

        * dom/DOMCoreException.idl:
        * dom/EventException.idl:
        * dom/RangeException.idl:
        * svg/SVGException.idl:
        * xml/XMLHttpRequestException.idl:
        * xml/XPathException.idl:

2009-10-21  Brian Weinstein  <bweinstein@apple.com>

        Reviewed by Timothy Hatcher.

        Fixes <https://bugs.webkit.org/show_bug.cgi?id=30616>.
        REGRESSION (r49036): Web Inspector: Summary graph no longer switching to size summary.
        
        Add a check to make sure a function we need to calculate percentages is
        defined before we use it.

        * inspector/front-end/ResourcesPanel.js:
        (WebInspector.ResourcesPanel.prototype._updateGraphDividersIfNeeded):

2009-10-21  Keishi Hattori  <casey.hattori@gmail.com>

        Reviewed by Timothy Hatcher.
