@@ -1,3 +1,13 @@
+2009-10-21  Dumitru Daniliuc  <dumi@chromium.org>
+
+        Reviewed by Dimitri Glazkov.
+
+        Adding the ability to enable/disable functions in V8 at runtime.
+
+        https://bugs.webkit.org/show_bug.cgi?id=30650
+
+        * bindings/scripts/CodeGeneratorV8.pm:
+
 2009-10-21  Darin Adler  <darin@apple.com>
 
         Swedish search (and other languages as well) is broken while fixing Japanese search
